# libgba

./: CMakeLists.txt  LICENSE  README.md  gba.cfg  gba.h  gba_crt0.s  noop_libc.c  random.h
base/: gba.h  types.h
cmake/: GBAExecutable.cmake
libc/: gba_libc.c
tools/: img2bytes  prepare-tilemaps
